@@ -16,3 +16,4 @@ depth: 1
 * Fix radio and checkbox elements shrinking when using a long label (Sage Abdullah)
 * Fix select elements expanding beyond their container when using a long option label (Sage Abdullah)
 * Fix timezone handling of `TemplateResponse`s for users with a custom timezone (Stefan Hammer, Sage Abdullah)
+* Ensure TableBlock initialisation correctly runs after load and its width is aligned with the parent panel (Dan Braghis)
